Added menu and fixed layout

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,37 @@ body {
 
 h1, h2 {
     text-align: center;
+    margin-top: 60px;
 }
 
 button {
     
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111111;
+  }
+
+  #home, #aboutme, #projects {
+    scroll-margin-top: 70px;
+  }
