--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,27 @@ body {
     display: flex;
 }
 
-h1, h2 {
-    text-align: center;
+h1 {
+    font-size: 50px;
     margin-top: 60px;
 }
 
+h2 {
+    font-size: 35px;
+    margin-top: 60px;
+}
+
+p {
+  font-size: 20px;
+}
+
+p, h1, h2, h3 {
+    text-align: center;
+}
+
 button {
-    
+    padding: 10px;
+    font-size: 20px;
 }
 
 ul {
