--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,11 @@ h2 {
     font-size: 35px;
 }
 
-p {
-  font-size: 20px;
+h3 {
+  font-size: 25px;
 }
 
-p, h1, h2, h3 {
+h1, h2, h3 {
     text-align: center;
 }
 
