--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,19 @@ body {
     margin: auto;
     justify-content: center;
     display: flex;
+
+    margin-bottom: 10px;
+}
+
+p {
+  line-height: 1.5;
+  width: 50%;
+  text-align: center;
+  margin: auto;
 }
 
 h1 {
     font-size: 50px;
-    margin-top: 60px;
 }
 
 h2 {
@@ -37,24 +45,24 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333333;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: #111111;
-  }
+}
 
-  #home, #aboutme, #projects, #resume {
-    scroll-margin-top: 70px;
-  }
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+}
+
+#home, #aboutme, #projects, #resume {
+  scroll-margin-top: 70px;
+}
