--- a/css/system.css
+++ b/css/system.css
@@ -6,9 +6,10 @@
 
 .display div {
     margin: 2%;
-    width: 20%;
+    max-width: max-content;
+    /* width: 20%; */
 }
 
 img {
-    width: 100%;
+    width: 300px;
 }
